@@ -148,6 +148,8 @@ _DEFUN(_fflush_r, (ptr, fp),
 	      fp->_p = fp->_bf._base;
 	      if (fp->_flags & __SOFF)
 		fp->_offset = curoff;
+	      if (HASUB (fp))
+		FREEUB (ptr, fp);
 	    }
 	  else
 	    {
